<resources>

    <string-array name="planets_array">
        <item>New</item>
        <item>Open</item>
        <item>Save</item>
        <item>Import from JSON</item>
        <item>Import from FreeMind</item>
        <item>Export to JSON</item>
    </string-array>
    <string name="app_name">M3</string>
    <string name="action_settings">Settings</string>
    <string name="plus">Add</string>
    <string name="title_activity_graph">Graph</string>
    <string name="export">Export</string>
    <string name="export_svg">To SVG</string>
    <string name="export_json">To JSON</string>
    <string name="reset">Reset</string>
    <string name="new_node">Insert</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="lr">Left to Right</string>
    <string name="rl">Right to Left</string>
    <string name="layout">Layout</string>
    <string name="diagonal">Diagonal</string>
    <string name="elbow">Elbow</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
